improve server config